| Bug #13197 | NDB needs better error message for not enough memory. | ||
|---|---|---|---|
| Submitted: | 14 Sep 2005 21:08 | Modified: | 13 Oct 2005 13:20 |
| Reporter: | Jonathan Miller | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Linux (Linux) |
| Assigned to: | Tomas Ulin | Target Version: | |
[14 Sep 2005 21:08]
Jonathan Miller
[3 Oct 2005 18:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30649
[3 Oct 2005 18:45]
Tomas Ulin
Added the following error messages Time: Monday 3 October 2005 - 20:32:31 Status: Permanent error, external action needed Message: Out of data memory during system restart (Configuration error) Error: 6800 Error data: DbtupSystemRestart.cpp Error object: DBTUP (Line: 190) 0x0000000a Program: /home/tomas/mysql-5.0/ndb/src/kernel/ndbd Pid: 1027 Trace: /home/tomas/mysql-5.0/mysql-test/ndbcluster-1186/ndb_2_trace.log.2 Version: Version 5.0.15 (rc) Time: Monday 3 October 2005 - 20:42:08 Status: Permanent error, external action needed Message: Out of index memory during system restart (Configuration error) Error: 6600 Error data: DbaccMain.cpp Error object: DBACC (Line: 8161) 0x0000000a Program: /home/tomas/mysql-5.0/ndb/src/kernel/ndbd Pid: 12107 Trace: /home/tomas/mysql-5.0/mysql-test/ndbcluster-1186/ndb_2_trace.log.4 Version: Version 5.0.15 (rc)
[10 Oct 2005 8:09]
Tomas Ulin
Bug #13197, Bug #11749, Bug #12786, Bug #11739 New and improved Error messages from 5.0.15. Error messages not updated in 4.1.
[13 Oct 2005 13:20]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 5.0.15 changelog. Closed.
