Bug #13197  	NDB needs better error message for not enough memory. - added 2 new error codes for out of data and index memory during SR

+ removed c++ style comments from c file